@@ -1,4 +1,4 @@
-Copyright (c) 2000-2005 Marc Alexander Lehmann <schmorp@schmorp.de>
+Copyright (c) 2000-2007 Marc Alexander Lehmann <schmorp@schmorp.de>
 
 Redistribution and use in source and binary forms, with or without modifica-
 tion, are permitted provided that the following conditions are met:
@@ -9,9 +9,6 @@ tion, are permitted provided that the following conditions are met:
   2.  Redistributions in binary form must reproduce the above copyright
       notice, this list of conditions and the following disclaimer in the
       documentation and/or other materials provided with the distribution.
-
-  3.  The name of the author may not be used to endorse or promote products
-      derived from this software without specific prior written permission.
 
 THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR IMPLIED
 WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MER-
