@@ -1,4 +1,5 @@
 2.1  Fri Nov  2 13:34:42 CET 2007
+	- switched to a 2-clause bsd license with GPL exception.
 	- get rid of memcpy.
         - tentatively use rep movsb on x86 and x86_64 (gcc only) for a
           moderate speed improvement.
